# crdtools

./: .bazelrc  .gitignore  AUTHORS.md  BUILD  CREDITS.md  README.md  WORKSPACE  expanded_external_deps.bzl  external_deps.bzl
src/main/java/com/gs/crdtools/: ApiInformation.java  BUILD  BaseObject.java  CrdToolsArgs.java  CrdtoolsCodegen.java  CustomOverrideTemplateEngine.java  Generated.java  GenerationInformation.java  Generator.java  MyCodegen.java  OverrideTemplateLoader.java  SourceGenFromSpec.java  SourceGenerator.java  SourceGeneratorHelper.java  SpecExtractor.java  SpecExtractorHelper.java  ToYaml.java  Utils.java  VavrHelpers.java  Yamlifier.java
src/main/java/com/gs/utils/: BUILD  VavrHelpers.java
src/main/java/com/nryaml/: BUILD.bazel  WrappingList.java  WrappingMap.java  YAMLMapping.java  YAMLSequence.java  YAMLUtil.java  YAMLValue.java  YAMLValueImpl.java
src/main/java/io/swagger/codegen/v3/cli/: BUILD.bazel  MyCodegen.java  SwaggerCodegen.java
src/main/resources/: BUILD
src/main/resources/swaggerTemplateOverloads/: generatedAnnotation.mustache
src/test/java/com/gs/crdtools/: BUILD  CrdToolsArgsTest.java  CustomGenerationTest.java  GeneratorTest.java  Result.java  SourceGenFromSpecTest.java  (+3 more)
src/test/java/com/nryaml/: BUILD.bazel  WrappingListTest.java  WrappingMapTest.java  YAMLMappingTest.java  YAMLSequenceTest.java  YAMLUtilTest.java  YAMLValueTest.java
src/test/resources/: AccessContextManagerAccessLevelGenerated.txt  BUILD  crd0.yaml  crd1.yaml  managedcertificates-crd.yaml  minimal-crd.yaml  minimal-openapi.yaml  pet.yml
(+9 files in other folders)
