java_library(
    name = "swagger-codegen-entrypoint",
    srcs = [
        "MyCodegen.java",
        "SwaggerCodegen.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/gs/crdtools:base-object",
        "@maven//:io_kubernetes_client_java_api",
        "@maven//:io_swagger_codegen_v3_swagger_codegen_cli",
        "@maven//:io_vavr_vavr",
    ],
)
